# HaxballEnv

./: EnvironmentTest.py  HaxballRegistration.py  README.md  TestSeedMethod.py  env_debugger.py  game_visualiser.py  main.py  network.py  ppo_runner.py  requirements.txt  run_arena.py  run_game_visualiser.py  simple_train_example.py  train_a3c.py  utils.py
agents/: ACagent.py  humanagent.py  idleagent.py  randomagent.py
basic_trainers/: ppo_fixed.py
haxballgym_package/: pyproject.toml
haxballgym_package/haxballgym/: README.md  __init__.py  arena.py  config.py  pygame_player.py
haxballgym_package/haxballgym/agents/: humanagent.py  idleagent.py  randomagent.py  templatenumpyagent.py
haxballgym_package/haxballgym/environments/: __init__.py  env.py  loaded_opponent_env.py  loaded_opponent_env_1v1.py  loaded_penny_matching_env.py  single_player_env.py
haxballgym_package/haxballgym/game_displayer/: basicdisplayer.py  movedisplayer.py
haxballgym_package/haxballgym/game_log/: gamelogger.py  log.py
haxballgym_package/haxballgym/game_simulator/: entities.py  gamesim.py  gamesimengine.py  haxball.py  haxballsim.py  playeraction.py
haxballgym_package/haxballgym/game_simulator/entities/: circle_entities.py  goals.py  rectangle_entities.py
haxballgym_package/haxballgym/haxball/: haxball.py  haxball_config_2p.yaml  haxball_config_4p.yaml
haxballgym_package/haxballgym/penny_matching/: penny_matching_config.yaml  pennymatching.py
haxballgym_package/haxballgym/test/: env_debugger.py  gym_test.py  haxball_env_debugger.py  pennymatching_env_debugger.py
(+212 files in other folders)
